241029_week9_실무프로젝트2

--- a/week7_BBS/src/main/resources/templates/index.html
+++ b/week7_BBS/src/main/resources/templates/index.html
@@ -7,9 +7,10 @@
 <body>
 
 <h3>template engine 사용하기 </h3>
-	<br>
-	<h1> ★게시판 프로그램★</h1>
-	<br>
-	<a href= "/insertFrom">등록</a>
+<br>
+<h1> ★게시판 프로그램★</h1>
+<br>
+<a href= "/question/insertFrom">등록</a>
+<a href= "/question/list">목록</a>
 </body>
 </html>
