--- a/week7_BBS/src/main/resources/templates/insertFrom.html
+++ b/week7_BBS/src/main/resources/templates/insertFrom.html
@@ -7,7 +7,7 @@
 <body>
 <!-- insertFrom.html -->
 <h1>  ★ 게시판 등록 ★</h1>
-<form action="/inesrt"> 
+<form action="/question/inesrt"> 
 	제목 : <input type="text" name="subject"> <br>
 	내용 : <br>
 	<textarea row="5" cols= " 35"   name="content"> </textarea> 
