241105_실무프로젝트2_bbs인데 페이징 기술을 곁들임

--- a/week7_BBS/src/main/resources/templates/index.html
+++ b/week7_BBS/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <br>
 <h1> ★게시판 프로그램★</h1>
 <br>
-<a href= "/question/insertFrom">등록</a>
+<a href= "/question/create">등록</a>
 <a href= "/question/list">목록</a>
 </body>
 </html>
