--- a/week7_BBS/src/main/resources/templates/question_detail.html
+++ b/week7_BBS/src/main/resources/templates/question_detail.html
@@ -18,8 +18,26 @@
 			</div>
 			<div class="card-d-flex justify-content-end">  <!-- 컨텐츠 정렬을 제일 오른쪽 끝에 하겠다 --> 
 				<div class="badge bg-light text-dark p-2 text-start">
+						<div class="mb-2">
+						<span th:if="${author != null}"
+							th:text = ${qustion.author.username} >
+						</span>
 					<div th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd hh:mm'")}></div>
 				</div>
+			</div>
+			<!-- 질문 내용 수정 버튼 추가 -->
+			수정버튼은 누르면 질문을 수정하는 화면으로 넘어가야함. 새로운 부분이 있으므로 코드를 하나씩 입력하면서, 현재 질문이 몇번째 값인지 가지고가야하므로 id값이 필요함 
+			수정도 로그인이 되어야만 수정할 수 있도록,sequrity authorize이용함
+			질문에 대한 수정할때 질문에 되어있는 글쓴이랑 로그인한 글쓴이가 같아야 한다는 조건 추가
+			수정버튼 누르면 modify로 이동하니까 controller에서 입력받는 부분을 연결시킴
+						<div class="my-3"> <!-- 마진 3 -->
+				<a th:href="@{|/question/modify/${questrion.id}|}"
+					class="btn btn-sm btn-outline-secondaty"
+					sec:authorize="isAuthenticated()"
+					th:if="${question.author != null and 
+							#authentication.getPrinciapl().getUsername() == question.author.username}"
+					th:text="수정">
+				</a>
 			</div>
 		</div>
 	</div>
@@ -35,6 +53,12 @@
 			</div>
 			<div class="d-flex justify-content-end">
 				<div class="badge bg-light text-dark p-2 text-start">
+					</div>
+				<div class="mb-2">
+						<span th:if="${answer.author != null}"
+							th:text = ${answer.author.username} >
+						</span>
+					</div>	
 					<div thLtext="${#temporals.format(answer.createDate,'yyyy-MM-dd hh:mm')}">
 					</div>
 				</div>
