24-11-26 13주차_1교시 활동

--- a/week7_BBS/src/main/resources/templates/layout.html
+++ b/week7_BBS/src/main/resources/templates/layout.html
@@ -24,5 +24,9 @@
 
 <script th:src="@{/bootstrap.min.js}"></script>
 
+
+<!-- javascript 시작 부분 -->
+<th:block layout:fragment="script"></th:block>
+
 </body>
 </html>
